2025-01-23T00:38:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12919789651 # 775
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-23
* notice: last 14d: unq all: 15 21
* notice: prev accum: outdated-unq outdated-all / unq all: 3831 8400 / 3852 8422
* notice: next accum: outdated-unq outdated-all / unq all: 3833 8402 / 3853 8423
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2025-01-08] / [2025-01-22]

2025-01-22T12:14:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12907966357 # 774
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-22
* notice: last 14d: unq all: 16 21
* notice: prev accum: outdated-unq outdated-all / unq all: 3831 8400 / 3849 8418
* notice: next accum: outdated-unq outdated-all / unq all: 3831 8400 / 3852 8422
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -1 -1 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2025-01-08 2025-01-22]

2025-01-22T00:38:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12898670585 # 773
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-22
* notice: last 14d: unq all: 15 18
* notice: prev accum: outdated-unq outdated-all / unq all: 3827 8396 / 3848 8417
* notice: next accum: outdated-unq outdated-all / unq all: 3831 8400 / 3849 8418
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2025-01-07] / [2025-01-21]

2025-01-21T12:14:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12886707523 # 772