@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-23T00:38:06Z",
+  "timestamp" : "2025-01-23T12:14:46Z",
   "count_outdated" : 8402,
   "uniques_outdated" : 3833,
-  "count" : 8423,
-  "uniques" : 3853,
+  "count" : 8427,
+  "uniques" : 3856,
   "clones" : [
     {
       "timestamp": "2025-01-09T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-01-23T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
