@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 15,
+  "count": 25,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2025-01-09T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2025-01-22T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-01-23T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
