@@ -1,3 +1,12 @@
+2025-01-23T12:14:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12928934484 # 776
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-23
+* notice: last 14d: unq all: 17 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 3833 8402 / 3853 8423
+* notice: next accum: outdated-unq outdated-all / unq all: 3833 8402 / 3856 8427
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2025-01-23]
+
 2025-01-23T00:38:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12919789651 # 775
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-23
